--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -3,7 +3,7 @@ name: Deploy Documentation to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger deployment on pushes to main
+      - main  # Deploy on pushes to main
 
 jobs:
   deploy:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: true   # In case you use submodules (e.g. for themes)
+          submodules: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -25,6 +25,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Install Pandoc
+        run: sudo apt-get update && sudo apt-get install -y pandoc
 
       - name: Build Documentation
         working-directory: docs
@@ -37,5 +40,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
-          # If you have a custom domain, add it here (e.g., 'docs.torchgmm.com')
-          cname: 'docs.torchgmm.com'
