--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-# requirements.txt
-
-# Core dependencies for TorchGMM code
-torch>=1.10.0
-numpy>=1.20.0
-
-# Common libraries for tutorials and plotting
-matplotlib>=3.3
-pandas>=1.3
-seaborn>=0.11
-tqdm>=4.64
-scikit-learn>=1.0
-
 # Documentation tools
-sphinx
+sphinx>=8.0
 sphinx-rtd-theme
 nbsphinx
-
-# If you use Jupyter notebooks
-jupyter
