--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -35,5 +35,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
           user: __token__
-          # Note: Do not provide a password.
-          # With OIDC configured, PyPI will exchange the token from GitHub automatically.
+          password: ${{ secrets.PYPI_TOKEN }}
