--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -1,38 +1,33 @@
 name: Publish Python Package to PyPI
 
 on:
-  release:
-    types: [created]
-
-permissions:
-  id-token: write
-  contents: read
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     steps:
-      # Check out the repository
       - uses: actions/checkout@v3
 
-      # Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: 3.8
 
-      # Upgrade pip and install build tools
-      - name: Install build tools
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip build
+          python -m pip install --upgrade pip
+          pip install build
 
-      # Build your package (this will create files in the dist/ folder)
       - name: Build package
         run: python -m build
 
-      # Publish the package to PyPI using OIDC
       - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.0
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          pip install twine
+          twine upload dist/*
