--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.10.1
-numpy==2.2.3
-Pygments==2.19.1
+matplotlib>=3.10.1
+numpy>=1.23.0
+Pygments>=2.19.1
 setuptools==75.8.0
-sphinx>=8.1.0
-torch==2.5.1
+sphinx>=7.1.0,<8.2.0
+torch>=2.5.1
